samples/_failures_safe/1761554430_72cf26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6378321c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6378321c.c:158:9: error: expected identifier at end of input
  158 |         tokens[token_count].
      |         ^~~~~~
./samples/SAFE/__tmp_6378321c.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6378321c.c:158:9: error: expected declaration or statement at end of input
